# phillib

./: .gitignore
arduino/deko/src/: main.cpp
arduino/desk/src/: main.cpp
arduino/hex_light/: platformio.ini
arduino/hex_light/src/: LedStrip.h  main.cpp
arduino/neopixl/src/: main.cpp
balls/: CMakeLists.txt
balls/src/: Ball.cpp  Ball.h  BallsMain.cpp  BallsMain.h  balls_main.cpp
balls/src/gui/: BallsMainWindow.cpp  BallsMainWindow.h  main_window_balls.ui
blender/: dji_mini_stand.blend  end_dr_neodyn.blend  filter_pond_hex.blend  flower.blend  green.blend  ground_anker.blend  pot_pinguin.blend  snack_box.blend  steffi_formen.blend  vase_mom.blend  vase_tall.blend  windmill.blend  wither_storm_head.blend
doku/: blender.txt  daily_heartattack.txt  linux.txt  mosquitto.txt  shell.bash  tmux.txt  vim_cs.txt  yt-dlp.txt
doku/insevis/: cs.txt
doku/vscode/: phil_snips.json.code-snippets
fractals/: CMakeLists.txt
fractals/src/: FractalLab.cpp  FractalLab.h  fractal_lab_main.cpp  main.ui
game_of_life/pre_pray/: CMakeLists.txt
game_of_life/pre_pray/deprecated_heap_of_junk/: Food.cpp  IObjectMap.h  Map.cpp  Map.h  ObjectMap.cpp  ObjectMap.h  PredPray.cpp  PredPray.h  Prey.h  SceneWorld.cpp  SceneWorld.h  main_window.ui
game_of_life/pre_pray/src/: Food.cpp  Food.h  IAgent.h  IObjectMap.h  Map.cpp  Map.h  PredPray.cpp  PredPray.h  Prey.cpp  Prey.h  main.cpp
game_of_life/pre_pray/src/gui/: MainWIndow.cpp  MainWIndow.h  MainWindow.cpp  MainWindow.h  ViewerWorld.cpp  ViewerWorld.h
gazebo_models/: hole_board.blend  hole_board.blend1  install.bash  tracks_30_R
gazebo_models/carr/: model.config  model.sdf
gazebo_models/cleft_board_min/: cleft_board_min.blend  cleft_board_min.blend1  model.config  model.sdf
gazebo_models/hole_board/: hole_board.blend  hole_board.blend1  model.config  model.sdf
gazebo_models/hole_board_min/: hole_board_min.blend  model.config  model.sdf
gazebo_models/lok/: model.config  model.sdf
gazebo_models/lok_sim/: model.config  model.sdf
gazebo_models/maze/: maze.blend  maze.blend1  model.config  model.sdf
gazebo_models/negative_obstacles/: model.config  model.sdf
gazebo_models/nist_wall/: model.config  model.sdf  nist_wall.blend  nist_wall.blend1
gazebo_models/nist_wall_double/: model.config  model.sdf  nist_wall_double.blend  nist_wall_double.blend1
gazebo_models/nist_wall_half/: model.config  model.sdf  nist_wall_half.blend  nist_wall_half.blend1
gazebo_models/plate_120/: model.config  model.sdf
gazebo_models/plate_60/: model.config  model.sdf  plate60.blend
gazebo_models/rail_bow/: model.config  model.sdf  rail_bow
gazebo_models/rail_ovale/: model.sdf
gazebo_models/rail_sim/: model.config  model.sdf  rail_sim.blend
gazebo_models/rail_straight/: model.config  model.sdf  rail_straight
gazebo_models/ramp_15/: model.config  model.sdf  ramp15.blend  ramp15.blend1
gazebo_models/ramp_30/: model.config  model.sdf  ramp30.blend  ramp30.blend1
gazebo_models/rr_wheel/: model.config  model.sdf
gazebo_models/step_10/: model.config  model.sdf  step10.blend  step10.blend1
gazebo_models/step_20/: model.config  model.sdf  step20.blend  step20.blend1
gazebo_models/step_30/: model.config  model.sdf  step30.blend  step30.blend1
gazebo_models/step_5/: model.config  model.sdf  step5.blend
gazebo_models/t334/: model.config  model.sdf
gazebo_models/tracks/: model.config  model.sdf  tracks.blend
gazebo_models/tracks_30_l/: model.config  model.sdf  tracks_30_L.stl  tracks_l.blend  tracks_l.blend1
gazebo_models/tracks_30_r/: model.config  model.sdf  tracks_r.blend  tracks_r.blend1
gazebo_models/tracks_str/: Track_Interlocking_Six_Ver2.stl  model.config  model.sdf  tracks_str.blend
gazebo_models/vader/: model.config  model.sdf
gazebo_models/velodyne_hdl32/: model.sdf
gazebo_models/wall/: model.config  model.sdf  wall.blend  wall.blend1
gazebo_models/worlds/: traversi.world
img_quad/: CMakeLists.txt
img_quad/src/: img_quad.cpp
scripts/: convert.bash
snake/: CMakeLists.txt
snake/src/: ContentSnake.h  Snake.cpp  Snake.h  snake_main.cpp
snake/src/gui/: GraphicsView.cpp  GraphicsView.h  SnakeGui.cpp  SnakeGui.h  snake.ui
src/backprojection_lab/: .gitignore  CMakeLists.txt
src/backprojection_lab/src/: lab.cpp
src/backprojection_lab/src/gui/: MainWindow.cpp  MainWindow.h  QvtkWidget.cpp  QvtkWidget.h  dialog_add_sensor.ui  dialog_voxelgrid.ui  main_window.ui
src/cpp_helper/: CMakeLists.txt
src/mandelbrot/: CMakeLists.txt
src/mandelbrot/src/: Mandelbrot.cpp  Mandelbrot.h  mandelbrot.cpp
src/mandelbrot/src/gui/: MainWindow.cpp  MainWindow.h  main_window.ui
src/qt/: CMakeLists.txt  ImageMagic.cpp  ImageMagic.h  MenuTransform.cpp  MenuTransform.h  TestQvtk.cpp  TestQvtk.h  WidgetDisplay.cpp  WidgetDisplay.h  WidgetImage.cpp  WidgetImage.h  WidgetNewQvtk.cpp  WidgetNewQvtk.h  WidgetQvtk.cpp  WidgetQvtk.h  datatypes.h  image_magic.cpp  menuTransform.ui  test_qvtk.cpp  test_scroll.cpp
src/qt/grview/: GrView.cpp  GrView.h  GraphScExample.cpp  GraphScExample.h  MainWindow.cpp  MainWindow.h  graph_sc_example.cpp
src/three_lab/: .gitignore  CMakeLists.txt
src/three_lab/src/: RandomClouds.cpp  RandomClouds.h  mathClouds.cpp  mathClouds.h  three_lab.cpp  typedefs.h
src/three_lab/src/gui/: DialogRandomPlane.cpp  DialogRandomPlane.h  DialogSlopedCloud.cpp  DialogSlopedCloud.h  MainWindowLab.cpp  MainWindowLab.h  QvtkWidget.cpp  QvtkWidget.h  dialog_random_plane.ui  dialog_sloped_cloud.ui  main_window.ui
src/treelib/: CMakeLists.txt
src/treelib/src/prq/: DataObjectBase.cpp  DataObjectBase.h  DataObjectPoint.cpp  DataObjectPoint.h  IDataObject.h  ITreeObject.h  Index.cpp  Index.h  Leaf.cpp  Leaf.h  Node.cpp  Node.h  Point.cpp  Point.h  RegionQ.cpp  RegionQ.h  TreeObjectBase.cpp  TreeObjectBase.h  TreePrq.cpp  TreePrq.h  test_tree_prq.cpp
src/utils/: CMakeLists.txt  Complex.cpp  Complex.h  Fifo.h  MutexSingleton.cpp  MutexSingleton.h  ProjectionPinHole.cpp  ProjectionPinHole.h  WrapperTinyXML.cpp  WrapperTinyXML.h  random.cpp  random.h  typedefs_eigen.h  utilsmath.cpp  utilsmath.h
(+113 files in other folders)
